--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,19 @@
         </div>
     </header>
 
+    <div class="hero">
+        <div class="hero__inner">
+            <div class="hero__heading">
+            <h1 class="hero__title">
+                Слоновья ферма «Гиппопотам» —
+                15 лет выращиваем и воспитываем слонов
+            </h1>
+            <a class="hero__btn" href="#">Больше о нас</a>
+        </div>
+        </div>
+        
+
+    </div>
 
     <script src="js/main.min.js"></script>
 </body>
