--- a/app/index.html
+++ b/app/index.html
@@ -59,16 +59,88 @@
     <div class="hero">
         <div class="hero__inner">
             <div class="hero__heading">
-            <h1 class="hero__title">
-                Слоновья ферма «Гиппопотам» —
-                15 лет выращиваем и воспитываем слонов
-            </h1>
-            <a class="hero__btn" href="#">Больше о нас</a>
+                <h1 class="hero__title">
+                    Слоновья ферма «Гиппопотам» — <br>
+                    15 лет выращиваем и воспитываем слонов
+                </h1>
+                <a class="hero__btn" href="#">Больше о нас</a>
+            </div>
         </div>
-        </div>
-        
-
     </div>
+
+    <section class="about">
+
+        <div class="about__inner">
+            <div class="about__description">
+                <h2 class="about__title title">
+                    Кто мы такие?
+                </h2>
+                <p class="about__text">
+                    Слоновья ферма <span>«Гиппопотам»</span> — уникальная в своем роде ферма. <br>
+                    Мы не просто выращиваем слонов, но <a class="about__link" href="#">занимаемся их воспитанием</a>
+                    и обучением. <br>
+                    Мы учим их жить в современном социуме и помогаем людям найти с ними общий язык.
+
+                </p>
+            </div>
+            <div class="about__stats">
+                <div class="about__stats-inner">
+                    <div class="about__item">
+                        <p class="about__item-num">
+                            142
+                        </p>
+                        <p class="about__item-text">
+                            слона куплено
+                        </p>
+                    </div>
+                    <div class="about__item">
+                        <p class="about__item-num">
+                            100
+                        </p>
+                        <p class="about__item-text">
+                            счастливых клиентов
+                        </p>
+                    </div>
+                    <div class="about__item">
+                        <p class="about__item-num">
+                            15
+                        </p>
+                        <p class="about__item-text">
+                            международных
+                            наград
+                        </p>
+                    </div>
+                    <div class="about__item">
+                        <p class="about__item-num">
+                            99
+                        </p>
+                        <p class="about__item-text">
+                            слонов ждут
+                            своих хозяев
+                        </p>
+                    </div>
+                    <div class="about__item">
+                        <p class="about__item-num">
+                            58
+                        </p>
+                        <p class="about__item-text">
+                            проведенных
+                            мероприятий
+                        </p>
+                    </div>
+                    <div class="about__item">
+                        <p class="about__item-num">
+                            12
+                        </p>
+                        <p class="about__item-text">
+                            проведенных
+                            мероприятий
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <script src="js/main.min.js"></script>
 </body>
