--- a/app/index.html
+++ b/app/index.html
@@ -70,12 +70,12 @@
 
     <section class="about">
         <div class="about__inner">
-            <div class="about__description">
-                <h2 class="about__title title">
+            <div class="about__description description">
+                <h2 class="description__title title">
                     Кто мы такие?
                 </h2>
-                <p class="about__text">
-                    Слоновья ферма <span>«Гиппопотам»</span> — уникальная в своем роде ферма. <br>
+                <p class="description__text">
+                    Слоновья ферма <span>&laquo;Гиппопотам&raquo;</span> — уникальная в своем роде ферма. <br>
                     Мы не просто выращиваем слонов, но <a class="about__link" href="#">занимаемся их воспитанием</a>
                     и обучением. <br>
                     Мы учим их жить в современном социуме и помогаем людям найти с ними общий язык.
@@ -139,6 +139,117 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section class="services">
+        <div class="services__description description">
+            <h2 class="description__title title">
+                Наши услуги
+            </h2>
+            <div class="description__text">
+                Мы предоставляем полный спектр услуг: от катания на слонах до помощи оформления документов на их
+                усыновление. Оставляйте заявку, наши специалисты помогут вам определиться и выбрать лучшее предложение.
+            </div>
+        </div>
+
+        <div class="services__cards cards">
+            <div class="cards__card">
+                <div class="cards__card-inner">
+                    <div class="cards__img">
+                        <img src="images/services-1.jpg" alt="">
+                        <h3 class="cards__title">Слоновья 
+                            ферма</h3>
+                    </div>
+                    <div class="cards__hover">
+                        <p class="cards__hover-text">
+                            Популярное развлечение 
+                            и интересная активность 
+                            для корпоративов и деловых встреч.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="cards__card">
+                <div class="cards__card-inner">
+                    <div class="cards__img">
+                        <img src="images/services-1.jpg" alt="">
+                        <h3 class="cards__title">Слоновья 
+                            ферма</h3>
+                    </div>
+                    <div class="cards__hover">
+                        <p class="cards__hover-text">
+                            Популярное развлечение 
+                            и интересная активность 
+                            для корпоративов и деловых встреч.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="cards__card">
+                <div class="cards__card-inner">
+                    <div class="cards__img">
+                        <img src="images/services-1.jpg" alt="">
+                        <h3 class="cards__title">Слоновья 
+                            ферма</h3>
+                    </div>
+                    <div class="cards__hover">
+                        <p class="cards__hover-text">
+                            Популярное развлечение 
+                            и интересная активность 
+                            для корпоративов и деловых встреч.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="cards__card">
+                <div class="cards__card-inner">
+                    <div class="cards__img">
+                        <img src="images/services-1.jpg" alt="">
+                        <h3 class="cards__title">Слоновья 
+                            ферма</h3>
+                    </div>
+                    <div class="cards__hover">
+                        <p class="cards__hover-text">
+                            Популярное развлечение 
+                            и интересная активность 
+                            для корпоративов и деловых встреч.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="cards__card">
+                <div class="cards__card-inner">
+                    <div class="cards__img">
+                        <img src="images/services-1.jpg" alt="">
+                        <h3 class="cards__title">Слоновья 
+                            ферма</h3>
+                    </div>
+                    <div class="cards__hover">
+                        <p class="cards__hover-text">
+                            Популярное развлечение 
+                            и интересная активность 
+                            для корпоративов и деловых встреч.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="cards__card">
+                <div class="cards__card-inner">
+                    <div class="cards__img">
+                        <img src="images/services-1.jpg" alt="">
+                        <h3 class="cards__title">Слоновья 
+                            ферма</h3>
+                    </div>
+                    <div class="cards__hover">
+                        <p class="cards__hover-text">
+                            Популярное развлечение 
+                            и интересная активность 
+                            для корпоративов и деловых встреч.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            
     </section>
 
     <script src="js/main.min.js"></script>
