--- a/app/index.html
+++ b/app/index.html
@@ -154,102 +154,102 @@
 
         <div class="services__cards cards">
             <div class="cards__card">
-                <div class="cards__card-inner">
-                    <div class="cards__img">
-                        <img src="images/services-1.jpg" alt="">
-                        <h3 class="cards__title">Слоновья 
-                            ферма</h3>
-                    </div>
+                <div class="cards__img">
+                    <img src="images/services-1.jpg" alt="">
+                    <h3 class="cards__title">Слоновья
+                        ферма
+                    </h3>
                     <div class="cards__hover">
                         <p class="cards__hover-text">
-                            Популярное развлечение 
-                            и интересная активность 
+                            Популярное развлечение
+                            и интересная активность
                             для корпоративов и деловых встреч.
                         </p>
                     </div>
                 </div>
             </div>
             <div class="cards__card">
-                <div class="cards__card-inner">
-                    <div class="cards__img">
-                        <img src="images/services-1.jpg" alt="">
-                        <h3 class="cards__title">Слоновья 
-                            ферма</h3>
-                    </div>
+                <div class="cards__img">
+                    <img src="images/services-2.jpg" alt="">
+                    <h3 class="cards__title">Слоновья
+                        ферма
+                    </h3>
                     <div class="cards__hover">
                         <p class="cards__hover-text">
-                            Популярное развлечение 
-                            и интересная активность 
+                            Популярное развлечение
+                            и интересная активность
                             для корпоративов и деловых встреч.
                         </p>
                     </div>
                 </div>
             </div>
             <div class="cards__card">
-                <div class="cards__card-inner">
-                    <div class="cards__img">
-                        <img src="images/services-1.jpg" alt="">
-                        <h3 class="cards__title">Слоновья 
-                            ферма</h3>
-                    </div>
+                <div class="cards__img">
+                    <img src="images/services-3.jpg" alt="">
+                    <h3 class="cards__title">Слоновья
+                        ферма
+                    </h3>
                     <div class="cards__hover">
                         <p class="cards__hover-text">
-                            Популярное развлечение 
-                            и интересная активность 
+                            Популярное развлечение
+                            и интересная активность
                             для корпоративов и деловых встреч.
                         </p>
                     </div>
                 </div>
             </div>
             <div class="cards__card">
-                <div class="cards__card-inner">
-                    <div class="cards__img">
-                        <img src="images/services-1.jpg" alt="">
-                        <h3 class="cards__title">Слоновья 
-                            ферма</h3>
-                    </div>
+                <div class="cards__img">
+                    <img src="images/services-4.jpg" alt="">
+                    <h3 class="cards__title">Слоновья
+                        ферма
+                    </h3>
                     <div class="cards__hover">
                         <p class="cards__hover-text">
-                            Популярное развлечение 
-                            и интересная активность 
+                            Популярное развлечение
+                            и интересная активность
                             для корпоративов и деловых встреч.
                         </p>
                     </div>
                 </div>
             </div>
             <div class="cards__card">
-                <div class="cards__card-inner">
-                    <div class="cards__img">
-                        <img src="images/services-1.jpg" alt="">
-                        <h3 class="cards__title">Слоновья 
-                            ферма</h3>
-                    </div>
+                <div class="cards__img">
+                    <img src="images/services-5.jpg" alt="">
+                    <h3 class="cards__title">Слоновья
+                        ферма
+                    </h3>
                     <div class="cards__hover">
                         <p class="cards__hover-text">
-                            Популярное развлечение 
-                            и интересная активность 
+                            Популярное развлечение
+                            и интересная активность
                             для корпоративов и деловых встреч.
                         </p>
                     </div>
                 </div>
             </div>
             <div class="cards__card">
-                <div class="cards__card-inner">
-                    <div class="cards__img">
-                        <img src="images/services-1.jpg" alt="">
-                        <h3 class="cards__title">Слоновья 
-                            ферма</h3>
-                    </div>
+                <div class="cards__img">
+                    <img src="images/services-6.jpg" alt="">
+                    <h3 class="cards__title">Слоновья
+                        ферма
+                    </h3>
                     <div class="cards__hover">
                         <p class="cards__hover-text">
-                            Популярное развлечение 
-                            и интересная активность 
+                            Популярное развлечение
+                            и интересная активность
                             для корпоративов и деловых встреч.
                         </p>
                     </div>
                 </div>
             </div>
-            
+
+        </div>
+
+        <button class="services__btn btn-outline">
+            Хочу на слоновью ферму!
+        </button>
+
     </section>
 
     <script src="js/main.min.js"></script>
