--- a/app/index.html
+++ b/app/index.html
@@ -76,7 +76,7 @@
                 </h2>
                 <p class="description__text">
                     Слоновья ферма <span>&laquo;Гиппопотам&raquo;</span> — уникальная в своем роде ферма. <br>
-                    Мы не просто выращиваем слонов, но <a class="about__link" href="#">занимаемся их воспитанием</a>
+                    Мы не просто выращиваем слонов, но <a class="link" href="#">занимаемся их воспитанием</a>
                     и обучением. <br>
                     Мы учим их жить в современном социуме и помогаем людям найти с ними общий язык.
 
@@ -141,7 +141,7 @@
         </div>
     </section>
 
-    <section class="services">
+    <!-- <section class="services">
         <div class="services__description description">
             <h2 class="description__title title">
                 Наши услуги
@@ -249,7 +249,30 @@
         <button class="services__btn btn-outline">
             Хочу на слоновью ферму!
         </button>
+    </section> -->
 
+    <section class="our-elephants">
+        <h2 class="our-elephants__title title">Наши слоны</h2>
+        <div class="our-elephants__item">
+            <img src="images/our-elephants-bg.jpg" alt="">
+            <div class="our-elephants__info">
+                <p class="our-elephants__text">
+                    Мы выращиваем и воспитываем слонов
+                    из Юго-Восточной Азии и Африки. На нашей ферме одновременно проживают 99 слонов
+                    в возрасте от 1 года до 50 лет. Условия содержания слонов на нашей ферме соответствуют всем 
+                    <a class="link" href="#">мировым стандартам</a>.
+                </p>
+                <p>
+                    Слоны — лучшие друзья людей! Это социальные животные, которые легко поддаются дрессировке, верно
+                    служат и обладают эмпатией.
+                    Мы популяризируем семейство слоновьих
+                    и приглашаем всех желающих познакомиться
+                    с этими добрыми и милыми животными! </p>
+            </div>
+        </div>
+        <button class="our-elephants__btn btn-outline">
+            Хочу на слоновью ферму!
+        </button>
     </section>
 
     <script src="js/main.min.js"></script>
