--- a/app/index.html
+++ b/app/index.html
@@ -259,7 +259,7 @@
                 <p class="our-elephants__text">
                     Мы выращиваем и воспитываем слонов
                     из Юго-Восточной Азии и Африки. На нашей ферме одновременно проживают 99 слонов
-                    в возрасте от 1 года до 50 лет. Условия содержания слонов на нашей ферме соответствуют всем 
+                    в возрасте от 1 года до 50 лет. Условия содержания слонов на нашей ферме соответствуют всем
                     <a class="link" href="#">мировым стандартам</a>.
                 </p>
                 <p>
@@ -273,6 +273,68 @@
         <button class="our-elephants__btn btn-outline">
             Хочу на слоновью ферму!
         </button>
+    </section>
+
+    <section class="reviews">
+        <div class="container">
+            <h2 class="reviews__title title">
+                О нас пишут
+            </h2>
+            <div class="reviews__top">
+                <div class="reviews__box">
+                    <div class="reviews__box-img">
+                        <img src="images/reviews-1.jpg" alt="">
+                    </div>
+                    <p class="reviews__box-text">
+                        <span class="reviews__box-author">
+                            Ангелина, 42 года
+                        </span>
+                        «Слоновья ферма — это просто открытие! Моя жизнь еревернулась, когда я прокатилась на слоне.
+                        Я поменяла работу, съездила
+                        в Африку и купила слонёнка»
+                    </p>
+                </div>
+                <div class="reviews__box">
+                    <div class="reviews__box-img">
+                        <img src="images/reviews-2.jpg" alt="">
+                    </div>
+                    <p class="reviews__box-text">
+                        <span class="reviews__box-author">
+                            Вадим, 35 лет
+                        </span>
+                        «Раньше сомневался, стоит ли мне покупать слона.
+                        Но после посещения этой фермы перестал колебаться. Теперь это моя мечта»
+                    </p>
+                </div>
+                <div class="reviews__box">
+                    <div class="reviews__box-img">
+                        <img src="images/reviews-3.jpg" alt="">
+                    </div>
+                    <p class="reviews__box-text">
+                        <span class="reviews__box-author">
+                            Вера, 18 лет
+                        </span>
+                        «Я хотела завести котика, но после того, как попала в гости к этим слоникам — мои приоритеты
+                        полностью сменились. Слоны — хозяева планеты! Хочу слона и точка!»
+                    </p>
+                </div>
+            </div>
+            <div class="reviews__bottom">
+                <div class="reviews__quote">
+                    «Уникальная слоновья ферма! Ради усыновления слоненка сюда приезжают со всего мира.»
+                    <span class="reviews__quote-author">
+                        Магнитогорск Таймс
+                    </span>
+                </div>
+                <div class="reviews__quote">
+                    «По легенде именно здесь была сочинена басня „Слон и Моська“»
+                    <span class="reviews__quote-author">
+                        Городские известия
+                    </span>
+                </div>
+            </div>
+        </div>
+
     </section>
 
     <script src="js/main.min.js"></script>
