--- a/app/index.html
+++ b/app/index.html
@@ -337,6 +337,142 @@
 
     </section>
 
+    <section class="team">
+        <div class="container">
+            <div class="team__description description">
+                <h2 class="description__title title">
+                    Кто мы такие?
+                </h2>
+                <p class="description__text">
+                    В нашей команде собрались профессионалы и фанаты своего дела. У нас большой опыт работы в сфере разведения и воспитания слонов!
+                </p>
+            </div>
+
+            <div class="team__members">
+                <div class="team__member member">
+                    <div class="member__inner">
+                        <div class="member__img">
+                            <img src="images/member-1.jpg" alt="">
+                            <div class="member__hover">
+                                <ul class="member__hover-social social-list">
+                                    <li class="social-list__item">
+                                        <a href="" class="social-list__link">
+                                            <img src="images/icons/facebook-sm.png" alt="">
+                                        </a>
+                                    </li>
+                                    <li class="social-list__item">
+                                        <a href="" class="social-list__link">
+                                            <img src="images/icons/instagram-sm.png" alt="">
+                                        </a>
+                                    </li>
+                                    <li class="social-list__item">
+                                        <a href="" class="social-list__link">
+                                            <img src="images/icons/youtube-sm.png" alt="">
+                                        </a>
+                                    </li>
+                                    <li class="social-list__item">
+                                        <a href="" class="social-list__link">
+                                            <img src="images/icons/pinterest-sm.png" alt="">
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="member__info">
+                            <p class="member__name">
+                                Марта Смирнова
+                            </p>
+                            <p class="member__descr">
+                                Слоновий заводчик и воспитатель
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="team__member member">
+                    <div class="member__inner">
+                        <div class="member__img">
+                            <img src="images/member-2.jpg" alt="">
+                            <div class="member__hover">
+                                <ul class="member__hover-social social-list">
+                                    <li class="social-list__item">
+                                        <a href="" class="social-list__link">
+                                            <img src="images/icons/facebook-sm.png" alt="">
+                                        </a>
+                                    </li>
+                                    <li class="social-list__item">
+                                        <a href="" class="social-list__link">
+                                            <img src="images/icons/instagram-sm.png" alt="">
+                                        </a>
+                                    </li>
+                                    <li class="social-list__item">
+                                        <a href="" class="social-list__link">
+                                            <img src="images/icons/youtube-sm.png" alt="">
+                                        </a>
+                                    </li>
+                                    <li class="social-list__item">
+                                        <a href="" class="social-list__link">
+                                            <img src="images/icons/pinterest-sm.png" alt="">
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="member__info">
+                            <p class="member__name">
+                                Евгений Весельчак
+                            </p>
+                            <p class="member__descr">
+                                Тренер и диетолог
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="team__member member">
+                    <div class="member__inner">
+                        <div class="member__img">
+                            <img src="images/member-3.jpg" alt="">
+                            <div class="member__hover">
+                                <ul class="member__hover-social social-list">
+                                    <li class="social-list__item">
+                                        <a href="" class="social-list__link">
+                                            <img src="images/icons/facebook-sm.png" alt="">
+                                        </a>
+                                    </li>
+                                    <li class="social-list__item">
+                                        <a href="" class="social-list__link">
+                                            <img src="images/icons/instagram-sm.png" alt="">
+                                        </a>
+                                    </li>
+                                    <li class="social-list__item">
+                                        <a href="" class="social-list__link">
+                                            <img src="images/icons/youtube-sm.png" alt="">
+                                        </a>
+                                    </li>
+                                    <li class="social-list__item">
+                                        <a href="" class="social-list__link">
+                                            <img src="images/icons/pinterest-sm.png" alt="">
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="member__info">
+                            <p class="member__name">
+                                Катерина Пак
+                            </p>
+                            <p class="member__descr">
+                                Менеджер по работе с клиентами
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </section>
+
     <script src="js/main.min.js"></script>
 </body>
 
