--- a/app/index.html
+++ b/app/index.html
@@ -344,7 +344,8 @@
                     Кто мы такие?
                 </h2>
                 <p class="description__text">
-                    В нашей команде собрались профессионалы и фанаты своего дела. У нас большой опыт работы в сфере разведения и воспитания слонов!
+                    В нашей команде собрались профессионалы и фанаты своего дела. У нас большой опыт работы в сфере
+                    разведения и воспитания слонов!
                 </p>
             </div>
 
@@ -468,7 +469,96 @@
                         </div>
                     </div>
                 </div>
-                
+
+            </div>
+        </div>
+    </section>
+
+    <section class="achievements">
+        <div class="container-larger">
+            <div class="achievements__description description">
+                <h2 class="description__title title">
+                    Наши успехи
+                </h2>
+                <p class="description__text">
+                    Мы каждый день разрабатываем новые учебные методики, благодаря которым <br>
+                    наши слоны становятся воспитаннее и умнее.
+                    Посмотрите, чему научились наши слоны за последний год!
+                </p>
+            </div>
+            <div class="achievements__cards">
+                <div class="achievements__card">
+                    <div class="achievements__img">
+                        <img src="images/achievements-1.jpg" alt="">
+                        <div class="achievements__hover">
+                            <p class="achievements__text">
+                                Слон Артур
+                                выступает
+                                за феминизм
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="achievements__card">
+                    <div class="achievements__img">
+                        <img src="images/achievements-2.jpg" alt="">
+                        <div class="achievements__hover">
+                            <p class="achievements__text">
+                                Слон Артур
+                                выступает
+                                за феминизм
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="achievements__card">
+                    <div class="achievements__img">
+                        <img src="images/achievements-3.jpg" alt="">
+                        <div class="achievements__hover">
+                            <p class="achievements__text">
+                                Слон Артур
+                                выступает
+                                за феминизм
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="achievements__card">
+                    <div class="achievements__img">
+                        <img src="images/achievements-4.jpg" alt="">
+                        <div class="achievements__hover">
+                            <p class="achievements__text">
+                                Слон Артур
+                                выступает
+                                за феминизм
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="achievements__card">
+                    <div class="achievements__img">
+                        <img src="images/achievements-5.jpg" alt="">
+                        <div class="achievements__hover">
+                            <p class="achievements__text">
+                                Слон Артур
+                                выступает
+                                за феминизм
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="achievements__card">
+                    <div class="achievements__img">
+                        <img src="images/achievements-6.jpg" alt="">
+                        <div class="achievements__hover">
+                            <p class="achievements__text">
+                                Слон Артур
+                                выступает
+                                за феминизм
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
