--- a/app/index.html
+++ b/app/index.html
@@ -481,8 +481,7 @@
                     Наши успехи
                 </h2>
                 <p class="description__text">
-                    Мы каждый день разрабатываем новые учебные методики, благодаря которым <br>
-                    наши слоны становятся воспитаннее и умнее.
+                    Мы каждый день разрабатываем новые учебные методики, благодаря которым <br>наши слоны становятся воспитаннее и умнее.
                     Посмотрите, чему научились наши слоны за последний год!
                 </p>
             </div>
@@ -662,6 +661,29 @@
                         </li>
                     </ul>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="mailing">
+        <div class="mailing__container">
+            <div class="mailing__description description">
+                <h2 class="description__title title">
+                    Оставайтесь с нами
+                </h2>
+                <p class="description__text">
+                    Подпишитесь на наши рассылки, чтобы быть всегда в курсе дел команды <br>и ставить лайки нашим питомцам.
+                </p>
+            </div>
+
+            <div class="mailing__form">
+                <form class="form" action="#">
+                    <input class="form__input" type="text">
+                    <input class="form__input" type="text">
+                    <button class="form__btn btn">
+                        Подписаться
+                    </button>
+                </form>
             </div>
         </div>
     </section>
