--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
         </div>
     </header>
 
-    <div class="hero">
+    <section class="hero">
         <div class="hero__inner">
             <div class="hero__heading">
                 <h1 class="hero__title">
@@ -66,7 +66,7 @@
                 <a class="hero__btn" href="#">Больше о нас</a>
             </div>
         </div>
-    </div>
+    </section>
 
     <section class="about">
         <div class="about__inner">
@@ -251,6 +251,10 @@
         </button>
     </section> -->
 
+    <section class="gallery">
+        
+    </section>
+
     <section class="our-elephants">
         <h2 class="our-elephants__title title">Наши слоны</h2>
         <div class="our-elephants__item">
@@ -358,22 +362,22 @@
                                 <ul class="member__hover-social social-list">
                                     <li class="social-list__item">
                                         <a href="" class="social-list__link">
-                                            <img src="images/icons/facebook-sm.png" alt="">
+                                            <img src="images/icons/facebook.svg" alt="">
                                         </a>
                                     </li>
                                     <li class="social-list__item">
                                         <a href="" class="social-list__link">
-                                            <img src="images/icons/instagram-sm.png" alt="">
+                                            <img src="images/icons/instagram.svg" alt="">
                                         </a>
                                     </li>
                                     <li class="social-list__item">
                                         <a href="" class="social-list__link">
-                                            <img src="images/icons/youtube-sm.png" alt="">
+                                            <img src="images/icons/youtube.svg" alt="">
                                         </a>
                                     </li>
                                     <li class="social-list__item">
                                         <a href="" class="social-list__link">
-                                            <img src="images/icons/pinterest-sm.png" alt="">
+                                            <img src="images/icons/pinterest.svg" alt="">
                                         </a>
                                     </li>
                                 </ul>
@@ -398,22 +402,22 @@
                                 <ul class="member__hover-social social-list">
                                     <li class="social-list__item">
                                         <a href="" class="social-list__link">
-                                            <img src="images/icons/facebook-sm.png" alt="">
+                                            <img src="images/icons/facebook.svg" alt="">
                                         </a>
                                     </li>
                                     <li class="social-list__item">
                                         <a href="" class="social-list__link">
-                                            <img src="images/icons/instagram-sm.png" alt="">
+                                            <img src="images/icons/instagram.svg" alt="">
                                         </a>
                                     </li>
                                     <li class="social-list__item">
                                         <a href="" class="social-list__link">
-                                            <img src="images/icons/youtube-sm.png" alt="">
+                                            <img src="images/icons/youtube.svg" alt="">
                                         </a>
                                     </li>
                                     <li class="social-list__item">
                                         <a href="" class="social-list__link">
-                                            <img src="images/icons/pinterest-sm.png" alt="">
+                                            <img src="images/icons/pinterest.svg" alt="">
                                         </a>
                                     </li>
                                 </ul>
@@ -438,22 +442,22 @@
                                 <ul class="member__hover-social social-list">
                                     <li class="social-list__item">
                                         <a href="" class="social-list__link">
-                                            <img src="images/icons/facebook-sm.png" alt="">
+                                            <img src="images/icons/facebook.svg" alt="">
                                         </a>
                                     </li>
                                     <li class="social-list__item">
                                         <a href="" class="social-list__link">
-                                            <img src="images/icons/instagram-sm.png" alt="">
+                                            <img src="images/icons/instagram.svg" alt="">
                                         </a>
                                     </li>
                                     <li class="social-list__item">
                                         <a href="" class="social-list__link">
-                                            <img src="images/icons/youtube-sm.png" alt="">
+                                            <img src="images/icons/youtube.svg" alt="">
                                         </a>
                                     </li>
                                     <li class="social-list__item">
                                         <a href="" class="social-list__link">
-                                            <img src="images/icons/pinterest-sm.png" alt="">
+                                            <img src="images/icons/pinterest.svg" alt="">
                                         </a>
                                     </li>
                                 </ul>
@@ -481,7 +485,8 @@
                     Наши успехи
                 </h2>
                 <p class="description__text">
-                    Мы каждый день разрабатываем новые учебные методики, благодаря которым <br>наши слоны становятся воспитаннее и умнее.
+                    Мы каждый день разрабатываем новые учебные методики, благодаря которым <br>наши слоны становятся
+                    воспитаннее и умнее.
                     Посмотрите, чему научились наши слоны за последний год!
                 </p>
             </div>
@@ -672,7 +677,8 @@
                     Оставайтесь с нами
                 </h2>
                 <p class="description__text">
-                    Подпишитесь на наши рассылки, чтобы быть всегда в курсе дел команды <br>и ставить лайки нашим питомцам.
+                    Подпишитесь на наши рассылки, чтобы быть всегда в курсе дел команды <br>и ставить лайки нашим
+                    питомцам.
                 </p>
             </div>
 
@@ -687,6 +693,51 @@
             </div>
         </div>
     </section>
+
+    <footer class="footer">
+        <div class="footer__container">
+            <div class="footer__inner">
+                <a class="footer__logo logo" href="/">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 68 40" width="157" height="92">
+                        <style>
+                            tspan {
+                                white-space: pre
+                            }
+
+                            .shp0 {
+                                fill: #fff
+                            }
+                        </style>
+                        <path id="Shape 4" class="shp0"
+                            d="M0 0.25L8.18 0.25L8.18 3.37L3.27 3.37L3.27 14.83L0 14.83L0 0.25ZM10.43 14.83L10.43 0.25L13.71 0.25L13.71 9.31L20.05 0.25L22.91 0.25L22.91 14.83L19.64 14.83L19.64 5.77L13.3 14.83L10.43 14.83ZM33.65 3.37L28.64 3.37L28.64 14.83L25.37 14.83L25.37 0.25L36.93 0.25L36.93 14.83L33.65 14.83L33.65 3.37ZM47.67 3.37L42.65 3.37L42.65 14.83L39.38 14.83L39.38 0.25L50.94 0.25L50.94 14.83L47.67 14.83L47.67 3.37ZM60.39 0C64.75 0 68 2.89 68 7.54C68 11.95 64.75 15.08 60.39 15.08C56.03 15.08 52.78 12.18 52.78 7.54C52.78 3.31 55.83 0 60.39 0ZM60.39 11.95C63.11 11.95 64.52 9.99 64.52 7.54C64.52 4.87 62.7 3.12 60.39 3.12C58.02 3.12 56.26 4.87 56.26 7.54C56.26 10.04 58.1 11.95 60.39 11.95ZM8.29 19.72L3.27 19.72L3.27 31.17L0 31.17L0 16.6L11.56 16.6L11.56 31.17L8.29 31.17L8.29 19.72ZM20.6 16.35C24.96 16.35 28.21 19.24 28.21 23.88C28.21 28.3 24.96 31.42 20.6 31.42C16.24 31.42 12.99 28.53 12.99 23.88C12.99 19.66 16.04 16.35 20.6 16.35ZM20.6 28.3C23.32 28.3 24.73 26.34 24.73 23.88C24.73 21.22 22.91 19.47 20.6 19.47C18.23 19.47 16.47 21.22 16.47 23.88C16.47 26.38 18.31 28.3 20.6 28.3ZM43.49 16.6L46.42 16.6L52.37 31.17L48.87 31.17L47.69 28.11L42.02 28.11L40.83 31.17L37.54 31.17L43.49 16.6ZM43.25 24.99L46.46 24.99L44.86 20.86L43.25 24.99ZM52.98 16.6L56.28 16.6L60.7 22.74L64.87 16.6L67.96 16.6L67.96 31.17L64.69 31.17L64.69 21.89L60.7 27.57L60.23 27.57L56.26 21.95L56.26 31.17L52.98 31.17L52.98 16.6ZM28.21 16.6L28.21 19.72C28.98 19.72 29.7 19.93 30.33 20.29C30.4 20.33 30.48 20.29 30.49 20.21C30.52 19.91 30.67 19.32 31.43 19.19C32.08 19.08 32.6 19.5 32.71 20.11C32.83 20.75 32.41 21.32 31.83 21.44C31.75 21.46 31.71 21.55 31.75 21.62C32.52 23.17 32.93 28.2 32.93 28.2C33.1 29.77 33.14 31.35 33.07 32.93L32.78 38.89C32.76 39.49 33.23 40 33.83 40L34.46 40C35.06 40 35.53 39.49 35.5 38.89L35.22 32.89C35.14 31.3 35.19 29.71 35.35 28.14C35.35 28.14 35.8 22.79 36.53 21.63C36.58 21.55 36.54 21.46 36.46 21.45C36.09 21.4 35.34 21.17 35.43 20.15C35.48 19.66 35.86 19.27 36.34 19.2C37.44 19.05 37.63 19.89 37.65 20.29C37.66 20.37 37.75 20.42 37.82 20.37C38.52 19.95 39.24 19.72 40.08 19.72L40.08 16.6L28.21 16.6ZM34.64 23.37C36.34 25.01 37.9 25.65 38.82 25.89C38.98 25.94 38.95 26.17 38.78 26.17C37.88 26.17 36.3 25.87 34.07 24.38L34.64 23.37ZM33.64 23.37C31.94 25.01 30.37 25.65 29.45 25.89C29.3 25.94 29.33 26.17 29.49 26.17C30.4 26.17 31.98 25.87 34.21 24.38L33.64 23.37Z" />
+                    </svg>
+                </a>
+
+                <ul class="footer__social-list social-list">
+                    <li class="social-list__item">
+                        <a href="" class="social-list__link">
+                            <img src="images/icons/facebook.svg" alt="">
+                        </a>
+                    </li>
+                    <li class="social-list__item">
+                        <a href="" class="social-list__link">
+                            <img src="images/icons/instagram.svg" alt="">
+                        </a>
+                    </li>
+                    <li class="social-list__item">
+                        <a href="" class="social-list__link">
+                            <img src="images/icons/youtube.svg" alt="">
+                        </a>
+                    </li>
+                    <li class="social-list__item">
+                        <a href="" class="social-list__link">
+                            <img src="images/icons/pinterest.svg" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 
     <script src="js/main.min.js"></script>
 </body>
