--- a/app/index.html
+++ b/app/index.html
@@ -252,7 +252,29 @@
     </section> -->
 
     <section class="gallery">
-        
+        <h2 class="gallery__title title">
+            Как всё это выглядит?
+        </h2>
+        <div class="gallery__wrapper"></ul>
+            <div class="gallery__box-1">
+                <img src="images/gallery-1.jpg" alt="">
+            </div>
+            <div class="gallery__box-2">
+                <img src="images/gallery-4.jpg" alt="">
+            </div>
+            <div class="gallery__box-3">
+                <img src="images/gallery-5.jpg" alt="">
+            </div>
+            <div class="gallery__box-4">
+                <img src="images/gallery-2.jpg" alt="">
+            </div>
+            <div class="gallery__box-5">
+                <img src="images/gallery-3.jpg" alt="">
+            </div>
+            <div class="gallery__box-6">
+                <img src="images/gallery-6.jpg" alt="">
+            </div>
+        </div>
     </section>
 
     <section class="our-elephants">
