--- a/app/index.html
+++ b/app/index.html
@@ -141,7 +141,7 @@
         </div>
     </section>
 
-    <!-- <section class="services">
+    <section class="services">
         <div class="services__description description">
             <h2 class="description__title title">
                 Наши услуги
@@ -249,7 +249,7 @@
         <button class="services__btn btn-outline">
             Хочу на слоновью ферму!
         </button>
-    </section> -->
+    </section>
 
     <section class="gallery">
         <h2 class="gallery__title title">
